Simplified forms + Fix image on iOS

--- a/style.scss
+++ b/style.scss
@@ -155,6 +155,7 @@ header {
   .parcoursImage {
     width: 500px;
     border-radius: 25px;
+
   }
 }
 
@@ -186,8 +187,8 @@ header {
 
   #inschrijvingKinderen,
   #inschrijvingKoers {
-    height: 600px;
-    width: 600px;
+    height: 800px;
+    width: 800px;
     // min-width: 300px;
     background-image: url("./assets/inschrijvingVector.svg");
     background-size: 90%;
@@ -303,8 +304,7 @@ header {
     }
     .right {
       margin-top: 35px;
-      display: flex;
-      justify-content: center;
+      margin: auto;
     }
   }
 }
@@ -337,11 +337,12 @@ header {
 
   #parcours{
     .parcoursImage {
-      display: block;
       width: 100vw;
+      max-height: calc(100vh*1.414);
       padding: 15px;
       box-sizing: border-box;
       border-radius: 25px;
+
     }
   }
   #inschrijvingKinderen,
